# daturai_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py
src/: sample.txt  task_01.py
tests/: test_task.py
