[tool.poetry]
name = "daturai-project"
version = "0.1.0"
description = "DATURAI_INTERVIEW_PROJECT"
authors = ["George Ghindea <george.marian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
ruff = "^0.0.289"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N"]  # Use specific rulesets
ignore = ["E501"]  # Example: ignore line-length errors
target-version = "py310"  # Target your Python version

[tool.pytest.ini_options]
python_files = ["test_*.py"]
